# Elmesh

./: .gitignore  README.md  pyproject.toml
src/elmesh/: Elmesh.py  __init__.py
